--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,10 @@ services:
     - 80
   ports:
     - 80:80
-  command: ["bash", "-c", "a2enmod rewrite && apache2-foreground"]
+  command:
+      - bash
+      - -c
+      - |
+        chmod +x script.sh && \
+        ./script.sh
+    #entrypoint: ["/var/www/html/custom-entrypoint.sh", "-D", "FOREGROUND"]
