--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
         "vlucas/phpdotenv": "^5.6",
-        "spatie/image": "^3.4"
+        "intervention/image": "^3.4"
     }
 }
